# SimpleX-I2P

./: .dockerignore  .env.example  .gitignore  CLAUDE_STATUS.md  CMakeLists.txt  Dockerfile  I2PD_SETUP.md  README.md  docker-compose.yml
i2pd/: i2pd.conf  simplex-smp-tunnel.conf  tunnels.conf
scripts/: setup.sh  show-address.sh
src/: main.cpp  sam_client.cpp  sam_client.hpp  sam_test.cpp  smp_protocol.cpp  smp_protocol.hpp  smp_server.cpp  smp_server.hpp  smp_store.cpp  smp_store.hpp
tests/: CMakeLists.txt  smp_protocol_test.cpp
